6. Изменить программу Tracker из 2-го модуля [#307788]